# standup-pre-read-assistant

./: .gitignore  CODEX_PROMPT.md  Makefile  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
config/: example-team.yaml
docs/: CONNECTOR_CONTRACT.md
examples/: chat-rich-sample.json  expected-pre-read.md  github-pr-rich-sample.json  github-pr-sample.json  jira-mcp-sample-response.json  jira-rich-sample.json  jira-sample.json  prior-standup-rich.md  prior-standup.md
output/: evaluation-report.json  evaluation-report.md  standup-pre-read.md
specs/: design.md  requirements.md  tasks.md
src/standup_pre_read/: __init__.py  cli.py  collectors.py  config.py  connectors.py  evaluation.py  generator.py  models.py  normalizer.py
tests/: test_evaluation.py  test_pre_read.py
