[project]
name = "standup-pre-read-assistant"
version = "0.1.0"
description = "Local thin-slice standup pre-read generator using sample Jira, GitHub, and prior standup data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Standup Pre-Read Assistant Maintainers" }]
keywords = ["standup", "jira", "github", "markdown", "pre-read"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
standup-pre-read = "standup_pre_read.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true
